--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -5,7 +5,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2019",
-    "strict": true,
+    "strict": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
